# discoverome

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
app/: __init__.py  commands.py  extensions.py  main.py
app/models/chemopro/: models.py
app/models/globalpro/: __init__.py  models.py
app/static/css/: auto_complete.css  cr_slider.css  info_hover.css  slider_style.css  style.css
app/static/css/old_style/: style.css
app/static/js/: auto_complete.js  datatable.js  particles.js  search_ui.js  show_more.js  slider.js
app/templates/: base.html
