[project]
name = "discoverome"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.4.1",
    "flask>=3.1.3",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gseapy>=1.2.1",
    "jinja2>=3.1.6",
    "networkx>=3.6.1",
    "numpy>=2.4.6",
    "ollama>=0.6.2",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "polars>=1.41.0",
    "psycopg2-binary>=2.9.12",
    "pyarrow>=24.0.0",
    "python-dotenv>=1.2.2",
    "rdkit>=2026.3.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "sqlalchemy>=2.0.50",
    "sqlalchemy-utils>=0.42.1",
    "tqdm>=4.67.3",
]
